--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="small text-center text-muted fst-italic">Copyright &copy; Farma Natura 2023
-                    </div>
+                    <div class="small text-center text-muted fst-italic">Copyright &copy; Farma Natura 2023</div>
                 </div>
             </div>
         </div>
